[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -528,7 +528,7 @@ annotations.action.delete.tooltip=Supprimer cette annotation
 annotations.action.edit.cancel.text=Annuler
 annotations.action.edit.error.notfound=Cette annotation n'existe plus. Merci de rafra\u00EEchir la page.
 annotations.action.edit.loaderror=\u00C9chec \:
-annotations.action.edit.submit.text=Mise \u00E0 jour
+annotations.action.edit.submit.text=Mettre \u00E0 jour
 annotations.action.edit.success=L'annotation a \u00E9t\u00E9 mise \u00E0 jour avec succ\u00E8s.
 annotations.action.edit.text=[Modifier]
 annotations.action.edit.tooltip=Modifier cette annotation
@@ -1959,7 +1959,7 @@ platform.core.profile.passwd.passwordMissmatch=Les deux mots de passe ne sont pa
 platform.core.profile.passwd.passwordTooShort=Votre nouveau mot de passe doit contenir au moins 6 caract\u00E8res.
 platform.core.profile.passwd.reenterPassword=Saisir \u00E0 nouveau le mot de passe
 platform.core.profile.passwd.return=Cliquez ici pour acc\u00E9der \u00E0 votre profil.
-platform.core.profile.passwd.submit=Mise \u00E0 jour
+platform.core.profile.passwd.submit=Enregistrer
 platform.core.profile.passwd.success=Votre mot de passe a \u00E9t\u00E9 modifi\u00E9 avec succ\u00E8s.
 platform.core.profile.passwd.title=Changement du mot de passe pour {0}
 platform.core.profile.phone=T\u00E9l\u00E9phone
@@ -2667,7 +2667,7 @@ saveobjects=Enregistrer les objets
 saveprefs=Enregistrer les Pr\u00E9f\u00E9rences
 saverights=Enregistrer les droits d'acc\u00E8s
 search=Rechercher
-search.admin.configuration.button=Mise \u00E0 jour
+search.admin.configuration.button=Enregistrer
 search.admin.configuration.seexwikicfg=Consulter le fichier <tt>xwiki.cfg</tt> pour plus d'options de configuration.
 search.admin.configuration.title=Configuration
 search.admin.lucene.indexing.action.indexcurrentwiki=Indexer le wiki
@@ -2749,7 +2749,7 @@ selectdocumentstoimport=Cliquez sur le fichier d'archive pour obtenir la liste d
 selectfiletoimport=S\u00E9lectionner les documents que vous souhaitez importer
 selectproptype=S\u00E9lectionner un type
 setthisavatar=Choisissez cet avatar
-setthispassword=Mise \u00E0 jour
+setthispassword=Enregistrer
 show=Voir
 showLeftPanels=Afficher les panneaux de gauche
 showRightPanels=Afficher les panneaux de droite
