--- a/xwiki-platform-tools/xwiki-platform-tool-jetty/xwiki-platform-tool-jetty-listener/src/main/resources/org/xwiki/tools/jetty/listener/messages_es.properties
+++ b/xwiki-platform-tools/xwiki-platform-tool-jetty/xwiki-platform-tool-jetty-listener/src/main/resources/org/xwiki/tools/jetty/listener/messages_es.properties
@@ -1,1 +1,2 @@
+## XWiki Translation for language es generated from http://www.l10n.xwiki.org
 jetty.startup.notification=El servidor se ha iniciado. Ahora puede acceder a su wiki introduciendo {} en su navegador.
