--- a/xwiki-platform-tools/xwiki-platform-tool-jetty/xwiki-platform-tool-jetty-listener/src/main/resources/org/xwiki/tools/jetty/listener/messages_fr.properties
+++ b/xwiki-platform-tools/xwiki-platform-tool-jetty/xwiki-platform-tool-jetty-listener/src/main/resources/org/xwiki/tools/jetty/listener/messages_fr.properties
@@ -1,1 +1,2 @@
-jetty.startup.notification=Le serveur a d\u00e9marr\u00e9. Vous pouvez maintenant acc\u00e9der \u00e0 votre wiki en entrant l'adresse {} dans votre navigateur internet.
+## XWiki Translation for language fr generated from http://www.l10n.xwiki.org
+jetty.startup.notification=Le serveur a d\u00E9marr\u00E9. Vous pouvez maintenant acc\u00E9der \u00E0 votre wiki en entrant l'adresse {} dans votre navigateur internet.
