--- a/xwiki-platform-tools/xwiki-platform-tool-jetty/xwiki-platform-tool-jetty-listener/src/main/resources/org/xwiki/tools/jetty/listener/messages_ro.properties
+++ b/xwiki-platform-tools/xwiki-platform-tool-jetty/xwiki-platform-tool-jetty-listener/src/main/resources/org/xwiki/tools/jetty/listener/messages_ro.properties
@@ -1,1 +1,2 @@
-jetty.startup.notification=Serverul a pornit. Pentru a accesa wiki-ul, introduce\u021bi adresa {} \u00een bara de adrese a navigatorului dumneavoastr\u0103.
+## XWiki Translation for language ro generated from http://www.l10n.xwiki.org
+jetty.startup.notification=Serverul a pornit. Pentru a accesa wiki-ul, introduce\u021Bi adresa {} \u00EEn bara de adrese a navigatorului dumneavoastr\u0103.
