--- a/xwiki-platform-tools/xwiki-platform-tool-jetty/xwiki-platform-tool-jetty-listener/src/main/resources/org/xwiki/tools/jetty/listener/messages_pt.properties
+++ b/xwiki-platform-tools/xwiki-platform-tool-jetty/xwiki-platform-tool-jetty-listener/src/main/resources/org/xwiki/tools/jetty/listener/messages_pt.properties
@@ -1,1 +1,2 @@
-jetty.startup.notification=O servidor foi iniciado. Agora voc\u00ea pode acessar o seu wiki, digitando {} no seu browser.
+## XWiki Translation for language pt generated from http://www.l10n.xwiki.org
+jetty.startup.notification=O servidor foi iniciado. Agora voc\u00EA pode acessar o seu wiki, digitando {} no seu browser.
