[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_sv.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_sv.properties
@@ -1134,6 +1134,7 @@ core.viewers.comments.add.failed=Misslyckades med publicering av kommentar\:
 core.viewers.comments.add.guestName.default=Anonym
 core.viewers.comments.add.guestName.prompt=F\u00F6rfattare\:
 core.viewers.comments.add.inProgress=Skickar kommentar...
+core.viewers.comments.add.says=s\u00E4ger\:
 core.viewers.comments.add.submit=L\u00E4gg till kommentar
 core.viewers.comments.add.title=L\u00E4gg till kommentar
 core.viewers.comments.commentDeleted=Raderade kommentar.
@@ -2314,7 +2315,7 @@ rendering.macro.documents.parameter.parent.name=f\u00F6r\u00E4lder
 rendering.macro.documents.parameter.space.description=Lista endast dokument i angivet rum
 rendering.macro.documents.parameter.space.name=rum
 rendering.macro.error.content.description=Inneh\u00E5llet i boxen.
-rendering.macro.error.description=Visare ett felmedelande.
+rendering.macro.error.description=Visar ett felmeddelande.
 rendering.macro.error.name=Felmedelande
 rendering.macro.footnote.content.description=text att placera i fotnoten
 rendering.macro.footnote.description=Genererar en fotnot p\u00E5 sidan.
