[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -1515,6 +1515,7 @@ extensions.distribution.upToDate=Toutes les extensions sont \u00E0 jour.
 extensions.distribution.wizardTitle=Assistant de Distribution
 extensions.info.authors=par \:
 extensions.info.authors.xwikiorg=L'\u00E9quipe de d\u00E9veloppement de XWiki
+extensions.info.category.changes=Modifications
 extensions.info.category.dependencies=D\u00E9pendances
 extensions.info.category.description=Description
 extensions.info.category.progress=Journal d'installation
@@ -2020,6 +2021,7 @@ platform.extension.distributionWizard.extension.defaultui.wikisStepSummary=Mettr
 platform.extension.distributionWizard.extension.defaultui.wikisStepTitle=Wikis
 platform.extension.distributionWizard.extension.defaultuiStepSummary=Installer les pages wiki par d\u00E9faut recommand\u00E9es pour la version courante du moteur d'ex\u00E9cution de XWiki. 
 platform.extension.distributionWizard.extension.defaultuiStepTitle=Interface utilisateur
+platform.extension.distributionWizard.extension.flavor.wikisStepTitle=Wikis
 platform.extension.distributionWizard.extension.outdatedextensionsStepSummary=Mettre \u00E0 jour les extensions install\u00E9es.
 platform.extension.distributionWizard.extension.outdatedextensionsStepTitle=Extensions
 platform.extension.distributionWizard.extensionsStepDescription=Les extensions fournissent des fonctionnalit\u00E9s suppl\u00E9mentaires en dessus du moteur d''ex\u00E9cution de XWiki. Ceux-ci sont d''habitude distribu\u00E9es en XAR (par exemple des {0}Applications XWiki{1}, des {2}macros wiki{3}, des {4}th\u00E8mes de couleur{5}) et en JAR (du code serveur qui inclut des {6}composants{7} et des {8}services{9}).
@@ -2033,6 +2035,7 @@ platform.extension.distributionWizard.extensionsStepReloadHint=Pour s''assurer q
 platform.extension.distributionWizard.extensionsStepSummary=Mettre \u00E0 jour les extensions install\u00E9es.
 platform.extension.distributionWizard.extensionsStepTitle=Extensions
 platform.extension.distributionWizard.extensionsStepUpToDate=Toutes les extensions sont \u00E0 jour.
+platform.extension.distributionWizard.flavorStepNoFlavorConfirm=Vous avez choisi de laisser le Wiki vide, merci de confirmer ou de revenir en arri\u00E8re.
 platform.extension.distributionWizard.reportStepDescription=L'installation est termin\u00E9e. Voici un rapport de ce qui s'est d\u00E9roul\u00E9 pendant l'installation.
 platform.extension.distributionWizard.reportStepDocumentDeletedSuccess=Document {0} supprim\u00E9 avec succ\u00E8s
 platform.extension.distributionWizard.reportStepDocumentRestoredSuccess=Document {0} restaur\u00E9 avec succ\u00E8s
@@ -2883,11 +2886,23 @@ watchlist.table.space=Espace
 watchlist.table.type=Type
 watchlist.table.wiki=Wiki
 watchlist.title=Favoris de {0}
+web.history.changes.attachment.content=Contenu
+web.history.changes.attachment.noContentChanges=Il ne s'agit pas d'un fichier texte ou le fichier est trop gros
+web.history.changes.attachment.size=Taille
+web.history.changes.details=D\u00E9tails
+web.history.changes.document.content=Contenu
 web.history.changes.document.defaultLocale=Langue par defaut
 web.history.changes.document.hidden=Masqu\u00E9
 web.history.changes.document.parent=Parent
 web.history.changes.document.syntax=Syntaxe
 web.history.changes.document.title=Titre
+web.history.changes.noChanges=Aucune modification
+web.history.changes.privateInformation=Informations priv\u00E9es
+web.history.changes.summary=R\u00E9sum\u00E9
+web.history.changes.summary.attachments=Pi\u00E8ces jointes
+web.history.changes.summary.classProperties=Propri\u00E9t\u00E9s de la Classe
+web.history.changes.summary.documentProperties=Propri\u00E9t\u00E9s de la Page
+web.history.changes.summary.modifiedAddedRemoved={0} modifications, {1} ajouts, {2} suppressions
 web.paging.firstPage=&laquo; Premi\u00E8re
 web.paging.lastPage=Derni\u00E8re &raquo;
 web.paging.nextPage=Suivante &gt;
@@ -3584,7 +3599,7 @@ xe.panels.last.members=Derniers utilisateurs
 xe.panels.members.name=Nom
 xe.panels.members.photo=Photo
 xe.panels.members.viewall=Voir tout
-xe.panels.modifications.my=Mes pages \u00E9dit\u00E9es
+xe.panels.modifications.my=Mes derni\u00E8res modifications
 xe.panels.navigation=Navigation
 xe.panels.new.itemType=Type d'\u00E9l\u00E9ment
 xe.panels.new.name=Nom
