[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_de.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_de.properties
@@ -1818,13 +1818,13 @@ platform.appwithinminutes.liveTableEditorDocCreatorColumnName=Ersteller
 platform.appwithinminutes.liveTableEditorDocDateColumnDescription=Das Datum, an dem der Eintrag zuletzt bearbeitet wurde
 platform.appwithinminutes.liveTableEditorDocDateColumnName=Letzte \u00C4nderung
 platform.appwithinminutes.liveTableEditorDocFullNameColumnDescription=Der volle Name des Dokuments (unter Angabe des Bereichs), in dem den Eintrag gespeichert ist
-platform.appwithinminutes.liveTableEditorDocFullNameColumnName=Voller Dokumenentname
+platform.appwithinminutes.liveTableEditorDocFullNameColumnName=Voller Dokumentenname
 platform.appwithinminutes.liveTableEditorDocNameColumnDescription=Der Name des Dokuments, in dem den Eintrag gespeichert ist
 platform.appwithinminutes.liveTableEditorDocNameColumnName=Dokumentenname
 platform.appwithinminutes.liveTableEditorDocSpaceColumnDescription=Der Name des Bereichs, der den Eintrag enth\u00E4lt
 platform.appwithinminutes.liveTableEditorDocSpaceColumnName=Bereich
 platform.appwithinminutes.liveTableEditorDocTitleColumnDescription=Der Titel des Dokuments, in dem den Eintrag gespeichert ist
-platform.appwithinminutes.liveTableEditorDocTitleColumnName=Setentitel
+platform.appwithinminutes.liveTableEditorDocTitleColumnName=Seitentitel
 platform.appwithinminutes.liveTableEditorGenericColumnGroupLabel=Allgemeine Spalten
 platform.appwithinminutes.liveTableEditorHelpDescription=Die allgemeinen Spalten zeigen Daten an, die unabh\u00E4ngig von der anwendungsspezifischen Datenstruktur immer vorhanden sind.\nSie enthalten Informationen \u00FCber die Dokumente, in denen Eintr\u00E4ge der Anwendung gespeichert werden.
 platform.appwithinminutes.liveTableEditorHelpTitle=Hinweis
@@ -3511,7 +3511,7 @@ xe.panels.new.space=Neuer Bereich
 xe.panels.orphaned=Verwaiste Seiten
 xe.panels.quicklinks=Schnelleinstieg
 xe.panels.quicklinks.blog=Blog
-xe.panels.quicklinks.dashboard=Wiki-Dashboard
+xe.panels.quicklinks.dashboard=Dashboard
 xe.panels.quicklinks.index=Dokumentenindex
 xe.panels.quicklinks.sandbox=Sandkasten
 xe.panels.quicklinks.userdirectory=Benutzerverzeichnis
