--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ko.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ko.properties
@@ -1,4 +1,36 @@
 ## XWiki Translation for language ko generated from http://www.l10n.xwiki.org
+Blog.BlogClass_blogType=\uBE14\uB85C\uADF8 \uC885\uB958
+Blog.BlogClass_description=\uC124\uBA85
+Blog.BlogClass_title=\uBE14\uB85C\uADF8 \uC81C\uBAA9
+Blog.BlogPostClass_category=\uBD84\uB958
+Blog.BlogPostClass_displayType_all=\uC804\uCCB4 \uAE00 \uBCF4\uAE30
+Blog.BlogPostClass_hidden=\uC228\uAE40
+Blog.BlogPostClass_publishDate=\uCD9C\uD310\uC77C
+Blog.BlogPostClass_published=\uCD9C\uD310
+Blog.BlogPostClass_title=\uC81C\uBAA9
+Blog.CategoryClass_description=\uC124\uBA85
+Blog.CategoryClass_name=\uC774\uB984
+Editing=\uC218\uC815
+Error=\uC624\uB958
+Invitation.WebHome_smtp_port=Smtp \uD3EC\uD2B8
+Invitation.WebHome_smtp_server=Smtp \uC11C\uBC84 \uD638\uC2A4\uD2B8\uBA85
+Invitation.WebHome_smtp_server_password=Smtp \uBE44\uBC00\uBC88\uD638
+Invitation.WebHome_smtp_server_username=Smtp \uC0AC\uC6A9\uC790\uBA85
+Panels.PanelClass_category=\uBD84\uB958
+Panels.PanelClass_description=\uC124\uBA85
+Panels.PanelClass_name=\uC774\uB984
+WYSIWYG=\uC704\uC9C0\uC704\uADF8
+Warning=\uACBD\uACE0
+XWiki.AggregatorURLClass_date=\uB0A0\uC9DC
+XWiki.AggregatorURLClass_imgurl=\uC774\uBBF8\uC9C0 URL
+XWiki.AggregatorURLClass_name=\uC774\uB984
+XWiki.AggregatorURLClass_url=URL
+XWiki.Mail_language=\uC5B8\uC5B4
+XWiki.Mail_subject=\uC81C\uBAA9
+XWiki.Mail_text=\uBCF8\uBB38
+XWiki.MessageStreamConfig_visibilityLevel_everyone=\uC804\uCCB4
+XWiki.MessageStreamConfig_visibilityLevel_group=\uADF8\uB8F9
+XWiki.MessageStreamConfig_visibilityLevel_user=\uC0AC\uC6A9\uC790
 XWiki.Registration_defaultRedirect=\uB4F1\uB85D \uC644\uB8CC\uC2DC \uC774\uB3D9\uD560 \uC704\uCE58
 XWiki.Registration_heading=\uB4F1\uB85D \uD398\uC774\uC9C0 \uC81C\uBAA9
 XWiki.Registration_liveValidation_enabled=\uC790\uBC14\uC2A4\uD06C\uB9BD\uD2B8 \uD56D\uBAA9 \uAC80\uC99D \uD65C\uC131\uD654
@@ -32,8 +64,21 @@ XWiki.XWikiPreferences_editcomment_mandatory=\uBC84\uC804 \uC694\uC57D \uC758\uB
 XWiki.XWikiPreferences_guest_comment_requires_captcha=\uBBF8\uB4F1\uB85D \uC0AC\uC6A9\uC790 \uB313\uAE00 \uB4F1\uB85D \uC2DC CAPTCHA \uD65C\uC131\uD654
 XWiki.XWikiPreferences_minoredit=\uC0AC\uC18C\uD55C \uC218\uC815
 XWiki.XWikiPreferences_parent=\uC0C1\uC704 \uC2A4\uD398\uC774\uC2A4
+XWiki.XWikiPreferences_skin=\uC2A4\uD0A8
+XWiki.XWikiPreferences_smtp_port=\uD3EC\uD2B8
+XWiki.XWikiPreferences_smtp_server=\uC11C\uBC84
+XWiki.XWikiPreferences_smtp_server_password=\uC11C\uBC84 \uBE44\uBC00\uBC88\uD638 (\uC635\uC158)
+XWiki.XWikiPreferences_smtp_server_username=\uC11C\uBC84 \uC0AC\uC6A9\uC790\uBA85 (\uC635\uC158)
+XWiki.XWikiPreferences_stylesheet=\uC2A4\uD0C0\uC77C\uC2DC\uD2B8
+XWiki.XWikiPreferences_stylesheets=\uC2A4\uD0C0\uC77C\uC2DC\uD2B8
 XWiki.XWikiPreferences_tags=\uD0DC\uADF8 \uB2EC\uAE30 \uD65C\uC131\uD654
+XWiki.XWikiPreferences_timezone=\uC2DC\uAC04\uB300
+XWiki.XWikiPreferences_timezone_default=\uC2DC\uC2A4\uD15C \uAE30\uBCF8
+XWiki.XWikiPreferences_title=\uC81C\uBAA9
 XWiki.XWikiPreferences_upload_maxsize=\uCD5C\uB300 \uC5C5\uB85C\uB4DC \uD06C\uAE30
+XWiki.XWikiPreferences_use_email_verification=\uC774\uBA54\uC77C \uD655\uC778 \uC0AC\uC6A9
+XWiki.XWikiPreferences_validation_email_content=\uC774\uBA54\uC77C \uB0B4\uC6A9 \uAC80\uC0AC
+XWiki.XWikiPreferences_version=\uBC84\uC804
 XWiki.XWikiPreferences_xwiki.title.mandatory=\uBB38\uC11C \uC81C\uBAA9 \uC758\uBB34\uD654
 XWiki.XWikiRights_allow=\uD5C8\uC6A9/\uAE08\uC9C0
 XWiki.XWikiRights_groups=\uADF8\uB8F9
@@ -42,12 +87,16 @@ XWiki.XWikiRights_users=\uC0AC\uC6A9\uC790
 XWiki.XWikiSkins_baseskin=\uAE30\uBCF8 \uC2A4\uD0A8
 XWiki.XWikiSkins_comments2.vm=\uB313\uAE00
 XWiki.XWikiSkins_edit.vm=\uD3B8\uC9D1
+XWiki.XWikiSkins_footer.vm=\uD478\uD130
+XWiki.XWikiSkins_header.vm=\uD5E4\uB354
 XWiki.XWikiSkins_logo=\uB85C\uACE0
 XWiki.XWikiSkins_name=\uC774\uB984
 XWiki.XWikiSkins_pagemenu.vm=\uD398\uC774\uC9C0 \uBA54\uB274
 XWiki.XWikiSkins_style.css=\uC2A4\uD0C0\uC77C
 XWiki.XWikiSkins_view.vm=\uBCF4\uAE30
+XWiki.XWikiSkins_viewheader.vm=\uD5E4\uB354 \uBCF4\uAE30
 XWiki.XWikiUsers_active=\uD65C\uC131\uD654
+XWiki.XWikiUsers_address=\uC8FC\uC18C
 XWiki.XWikiUsers_avatar=\uC544\uBC14\uD0C0
 XWiki.XWikiUsers_blog=\uBE14\uB85C\uADF8
 XWiki.XWikiUsers_blogfeed=\uBE14\uB85C\uADF8 \uD53C\uB4DC
