[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_de.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_de.properties
@@ -1524,7 +1524,7 @@ extensions.search.submit=Suchen
 extensions.search.tip=Erweiterung suchen\u2026
 extensions.uninstall.actions.cancel=Abbrechen
 extensions.uninstall.cleanPages.hint=Die folgenden Wiki-seiten werden nicht mehr ben\u00F6tigt und sollten daher problemlos gel\u00F6scht werden k\u00F6nnen. W\u00E4hlen Sie diejenigen Seiten ab, die Sie noch behalten wollen. Wenn Sie Wiki-seiten ge\u00E4ndert haben, sind diese hier nicht angew\u00E4hlt, damit Ihre \u00C4nderungen nicht verloren gehen. W\u00E4hlen Sie diese Seiten an, wenn Ihre \u00C4nderungen nicht wichtig sind.
-extensions.uninstall.cleanPages.label=Unbenutzte Wiki\u00DFseiten l\u00F6schen?
+extensions.uninstall.cleanPages.label=Unbenutzte Wiki-seiten l\u00F6schen?
 extensions.uninstall.cleanPages.selectedCount={0} / {1} Dokumente ausgew\u00E4hlt
 extensions.uninstall.error.notInstalled=Diese Erweiterung ist nicht installiert.
 extensions.uninstall.error.prepareFailure=Fehlschlag bei Vorbereitung der Deinstallation von Erweiterung {0} mit der Version {1}
@@ -1818,13 +1818,13 @@ platform.appwithinminutes.liveTableEditorDocCreatorColumnName=Ersteller
 platform.appwithinminutes.liveTableEditorDocDateColumnDescription=Das Datum, an dem der Eintrag zuletzt bearbeitet wurde
 platform.appwithinminutes.liveTableEditorDocDateColumnName=Letzte \u00C4nderung
 platform.appwithinminutes.liveTableEditorDocFullNameColumnDescription=Der volle Name des Dokuments (unter Angabe des Bereichs), in dem den Eintrag gespeichert ist
-platform.appwithinminutes.liveTableEditorDocFullNameColumnName=Voller Dokumenentname
+platform.appwithinminutes.liveTableEditorDocFullNameColumnName=Voller Dokumentenname
 platform.appwithinminutes.liveTableEditorDocNameColumnDescription=Der Name des Dokuments, in dem den Eintrag gespeichert ist
 platform.appwithinminutes.liveTableEditorDocNameColumnName=Dokumentenname
 platform.appwithinminutes.liveTableEditorDocSpaceColumnDescription=Der Name des Bereichs, der den Eintrag enth\u00E4lt
 platform.appwithinminutes.liveTableEditorDocSpaceColumnName=Bereich
 platform.appwithinminutes.liveTableEditorDocTitleColumnDescription=Der Titel des Dokuments, in dem den Eintrag gespeichert ist
-platform.appwithinminutes.liveTableEditorDocTitleColumnName=Setentitel
+platform.appwithinminutes.liveTableEditorDocTitleColumnName=Seitentitel
 platform.appwithinminutes.liveTableEditorGenericColumnGroupLabel=Allgemeine Spalten
 platform.appwithinminutes.liveTableEditorHelpDescription=Die allgemeinen Spalten zeigen Daten an, die unabh\u00E4ngig von der anwendungsspezifischen Datenstruktur immer vorhanden sind.\nSie enthalten Informationen \u00FCber die Dokumente, in denen Eintr\u00E4ge der Anwendung gespeichert werden.
 platform.appwithinminutes.liveTableEditorHelpTitle=Hinweis
@@ -3511,7 +3511,7 @@ xe.panels.new.space=Neuer Bereich
 xe.panels.orphaned=Verwaiste Seiten
 xe.panels.quicklinks=Schnelleinstieg
 xe.panels.quicklinks.blog=Blog
-xe.panels.quicklinks.dashboard=Wiki-Dashboard
+xe.panels.quicklinks.dashboard=Dashboard
 xe.panels.quicklinks.index=Dokumentenindex
 xe.panels.quicklinks.sandbox=Sandkasten
 xe.panels.quicklinks.userdirectory=Benutzerverzeichnis
