--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_hu.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_hu.properties
@@ -1,5 +1,12 @@
 ## XWiki Translation for language hu generated from http://www.l10n.xwiki.org
+Blog.BlogClass_blogType=Blog t\u00EDpus
+Blog.BlogClass_description=Le\u00EDr\u00E1s
+Blog.BlogClass_itemsPerPage=Megjelen\u00EDtett elemek oldalank\u00E9nt (csak oldalakra osztott megjelen\u00EDt\u00E9si m\u00F3dban)
+Blog.BlogClass_title=Blog c\u00EDm
 Blog.BlogPostClass_category=Kateg\u00F3ria
+Blog.BlogPostClass_content=Tartalom
+Blog.BlogPostClass_displayType_all=\u00D6sszes bejegyz\u00E9s megjelen\u00EDt\u00E9se
+Blog.BlogPostClass_extract=Kivonat
 Blog.BlogPostClass_hidden=Rejtett-e
 Blog.BlogPostClass_publishDate=Publik\u00E1ci\u00F3 ideje
 Blog.BlogPostClass_published=Publik\u00E1lt-e
@@ -8,8 +15,18 @@ Blog.CategoryClass_description=Le\u00EDr\u00E1s
 Blog.CategoryClass_name=N\u00E9v
 Editing=Szerkeszt\u00E9s
 Error=Hiba
+Invitation.InvitationMailClass_messageBody=Az \u00FCzenet tartalma
+Invitation.InvitationMailClass_sendingUser=\u00DCzenet felad\u00F3ja
+Invitation.InvitationMailClass_sentDate=\u00DCzenet k\u00FCld\u00E9s\u00E9nek id\u0151pontja
+Invitation.WebHome_smtp_port=Smtp port
+Invitation.WebHome_smtp_server=Smtp szerver host n\u00E9v
+Invitation.WebHome_smtp_server_password=Smtp jelsz\u00F3
+Invitation.WebHome_smtp_server_username=Smtp felhaszn\u00E1l\u00F3 n\u00E9v
+Invitation.WebHome_usersMayPersonalizeMessage=\u00DCzenetek szem\u00E9lyreszab\u00E1s\u00E1nak enged\u00E9lyez\u00E9se a felhaszn\u00E1l\u00F3k sz\u00E1m\u00E1ra
+Invitation.WebHome_usersMaySendToMultiple=\u00DCzenet k\u00FCld\u00E9s\u00E9nek enged\u00E9lyez\u00E9se egyszerre t\u00F6bb c\u00EDmre 
 Panels.PanelClass_category=Kateg\u00F3ria
 Panels.PanelClass_content=Tartalom
+Panels.PanelClass_description=Le\u00EDr\u00E1s
 Panels.PanelClass_name=N\u00E9v
 Panels.PanelClass_type=Panel t\u00EDpus
 WYSIWYG=WYSIWYG
@@ -21,7 +38,9 @@ XWiki.AggregatorURLClass_nb=nb
 XWiki.AggregatorURLClass_url=URL
 XWiki.FeedEntryClass_author=Szerz\u0151
 XWiki.FeedEntryClass_category=Kateg\u00F3ria
+XWiki.FeedEntryClass_content=Tartakin
 XWiki.FeedEntryClass_date=D\u00E1tum
+XWiki.FeedEntryClass_fullContent=Teljes tartalom
 XWiki.FeedEntryClass_read=Olvas\u00E1s
 XWiki.FeedEntryClass_tags=C\u00EDmk\u00E9k
 XWiki.FeedEntryClass_title=C\u00EDm
@@ -45,6 +64,17 @@ XWiki.XWikiPreferences_version=Verzi\u00F3
 XWiki.XWikiRights_allow=Enged\u00E9lyez/Megtagad
 XWiki.XWikiRights_groups=Csoportok
 XWiki.XWikiRights_levels=Szintek
+admin.configuration=Konfigur\u00E1c\u00F3
+admin.configuration.description=\u00C1ltal\u00E1nos wiki be\u00E1ll\u00EDt\u00E1sok
+admin.content=Tartalom
+admin.content.description=Wiki tartalm\u00E1nak m\u00F3dos\u00EDt\u00E1sa
+admin.customize=Szem\u00E9lyre szab\u00E1s
+admin.date=D\u00E1tum / Id\u0151
+admin.docextra=Dokument metaadat l\u00E1that\u00F3s\u00E1g
+admin.editing=Szerkeszt\u00E9s m\u00F3d be\u00E1ll\u00EDt\u00E1sai
+admin.editor=Szerkeszt\u0151
+admin.elements=Oldal elemek
+admin.export=Export
 comment=Megjegyz\u00E9s
 comments=Kommentek
 core.comment=Verzi\u00F3 \u00F6sszefoglal\u00F3
