[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -3976,8 +3976,8 @@ xe.wikimacrobridge.macroVisibility=Visibilit\u00E9
 xe.wikimacrobridge.noWikiMacro=Il n'y a pas encore de macros d\u00E9finies dans ce wiki
 xe.wikimacrobridge.wikiMacros=D\u00E9finitions de macros wiki existantes
 xe.xwiki.administration=Application d'administration
-xe.xwiki.administration.install=L''espace XWiki contient des documents techniques n\u00E9cessaires au bon fonctionnement du syst\u00E8me. Vous pouvez administrer votre wiki via {0}.
-xe.xwiki.space=Espace XWiki
+xe.xwiki.administration.install=Cette page ainsi que ses enfants contiennent des documents techniques n\u00E9cessaires au bon fonctionnement du syst\u00E8me. Elles contiennent \u00E9galement les pages de profil des utilisateurs. Vous pouvez administrer votre wiki via {0}.
+xe.xwiki.space=XWiki
 xe.xwiki.space.preferences=Pr\u00E9f\u00E9rences de l'espace XWiki
 xml=XML
 xwikidoc=Documentation
