--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_hu.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_hu.properties
@@ -1,5 +1,7 @@
 ## XWiki Translation for language hu generated from http://www.l10n.xwiki.org
 Blog.BlogClass_blogType=Blog t\u00EDpus
+Blog.BlogClass_blogType_global=K\u00F6zponti Blog (az \u00F6sszes blog posztjait egybegy\u0171jti)
+Blog.BlogClass_blogType_local=Helyi blog (a t\u00E1rhely posztjait gy\u0171jti egybe)
 Blog.BlogClass_description=Le\u00EDr\u00E1s
 Blog.BlogClass_itemsPerPage=Megjelen\u00EDtett elemek oldalank\u00E9nt (csak oldalakra osztott megjelen\u00EDt\u00E9si m\u00F3dban)
 Blog.BlogClass_title=Blog c\u00EDm
