[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -440,6 +440,9 @@ admin.messagestream.description=Activer ou d\u00E9sactiver les messages sur le w
 admin.ooserver=Serveur Office
 admin.ooserver.options=Options
 admin.ooserver.options.source=Ces options sont configur\u00E9es sur le serveur, dans {0}.
+admin.pagerights=Droits sur la page
+admin.pagerights.description=G\u00E9rez les droits gr\u00E2ce aux groupes et utilisateurs \: contr\u00F4lez qui peut voir, modifier et supprimer la page (cela n'impacte pas les pages filles).
+admin.pagerights.info=Ces droits s'appliquent uniquement \u00E0 cette page
 admin.panels=Panels
 admin.panels.panelwizard.description=Ajoutez ou supprimez des panels, changez l'organisation des panels
 admin.panelwizard=Organiseur de panels
@@ -681,10 +684,13 @@ core.action.upload.failure.maxSize=L''administrateur du wiki a limit\u00E9 \u00E
 core.action.upload.failure.noFiles=Aucun fichier attach\u00E9 n'a \u00E9t\u00E9 trouv\u00E9
 core.action.upload.failure.title=En cours d''upload des fichiers vers <a href\="{1}">{0}</a>
 core.action.upload.failure.wrongFileNames=Ces noms de fichier ne sont pas support\u00E9s
+core.backlinks.description=Pages poss\u00E9dant un lien vers cette page
 core.captcha.captchaAnswerIsWrong=Votre r\u00E9ponse est incorrecte, veuillez essayer \u00E0 nouveau.
 core.captcha.image.alternateText=L''image de v\u00E9rification devrait se trouver ici, vous pouvez rafra\u00EEchir la page ou appuyer sur le bouton {0} pour essayer d''obtenir une autre image.
 core.captcha.image.instruction=Veuillez taper le mot affich\u00E9 ci-dessus.
 core.captcha.image.label=Image de v\u00E9rification
+core.children.parentChildDescription=Pages ayant cette page comme parent
+core.children.title=Enfant de {0}
 core.comment=Commentaire
 core.comment.addClassProperty=Ajout de propri\u00E9t\u00E9 de classe
 core.comment.addComment=Ajout de commentaire
@@ -714,9 +720,11 @@ core.copy.allTranslations=Toutes les traductions
 core.copy.alreadyExists=Le document {0} existe d\u00E9j\u00E0. \u00CAtes-vous certain de vouloir l''\u00E9craser (son contenu sera perdu) ? 
 core.copy.cancel=Annuler
 core.copy.changeTarget=Modifier le nouveau document
+core.copy.children.hint=Copier aussi les pages enfants de la page d'origine
 core.copy.copydoc=Copier la page
 core.copy.copyingdoc=Page {0} copi\u00E9e vers {1} avec succ\u00E8s.
 core.copy.language.hint=Traduction de la page d'origine
+core.copy.source.label=Source
 core.copy.sourcedoc=Page source
 core.copy.sourcedoc.hint=Emplacement de la page d'origine
 core.copy.sourcepage=Page Source
@@ -726,6 +734,14 @@ core.copy.sourcespace.hint=Emplacement de l'espace d'origine
 core.copy.sourcewiki=Wiki Source
 core.copy.sourcewiki.hint=Emplacement du wiki d'origine
 core.copy.submit=Copier
+core.copy.target.location.label=Emplacement de la copie
+core.copy.target.name.hint=La copie peut avoir un nom diff\u00E9rent de la page d'origine
+core.copy.target.name.label=Nom
+core.copy.target.parent.label=Parent
+core.copy.target.title.hint=La copie peut avoir un titre diff\u00E9rent de la page d'origine
+core.copy.target.title.label=Titre de la copie
+core.copy.target.wiki.hint=Wiki vers lequel copier la page
+core.copy.target.wiki.label=Wiki
 core.copy.targetdoc=Page de destination
 core.copy.targetdoc.hint=Nom de la nouvelle page
 core.copy.targetpage=Page Cible
@@ -736,6 +752,11 @@ core.copy.targetwiki=Wiki Cible
 core.copy.targetwiki.hint=Wiki de la nouvelle page
 core.copy.title=Copier <a href\="{1}">{0}</a> 
 core.create.ajax.error=Une erreur est survenue, merci de rafraichir la page et d'essayer \u00E0 nouveau
+core.create.locationPreview.hint=Emplacement dans la hi\u00E9rarchie des pages o\u00F9 cette page sera cr\u00E9\u00E9e.
+core.create.locationPreview.label=Emplacement
+core.create.name.hint=Nom de la nouvelle page
+core.create.name.label=Nom
+core.create.name.placeholder=NouvellePage
 core.create.newPageTitle=Cr\u00E9er la page {0}
 core.create.page=Nom de la page \:
 core.create.page.error.docalreadyexists=La page  <a href\="{1}">{0}</a> existe d\u00E9j\u00E0. Merci de renseigner un autre nom de page (ou <a href\="{2}">de modifier la page {0}</a>).
@@ -745,11 +766,13 @@ core.create.page.template.empty=Page Wiki vide
 core.create.page.template.hint=Mod\u00E8le de page \u00E0 utiliser
 core.create.pageText=NouvellePage
 core.create.pageTitle=Cr\u00E9er une page
+core.create.popup.loading=Chargement...
 core.create.space=Nom de l'espace \:
 core.create.space.error.docalreadyexists=L''espace {0} existe d\u00E9j\u00E0. Merci de renseigner un autre nom d''espace.
 core.create.space.hint=Nom du nouvel espace
 core.create.space.template.empty=Page d'accueil vide
 core.create.space.template.hint=Mod\u00E8le \u00E0 utiliser pour la page d'accueil du nouvel espace
+core.create.spaceReference.label=Parent
 core.create.spaceTitle=Cr\u00E9er un espace
 core.create.template=Mod\u00E8le de page
 core.create.template.allowedspace=Les pages cr\u00E9\u00E9es \u00E0 partir du mod\u00E8le [{0}] doivent \u00EAtre cr\u00E9\u00E9es dans l''espace {1}
@@ -757,12 +780,21 @@ core.create.template.allowedspace.inline=Espaces autoris\u00E9s pour ''{0}'' \: 
 core.create.template.allowedspaces=Les pages cr\u00E9\u00E9es \u00E0 partir du mod\u00E8le [{0}] doivent \u00EAtre cr\u00E9\u00E9es dans l''un des espaces suivants \: {1}
 core.create.template.allowedspaces.inline=Espaces autoris\u00E9s pour ''{0}'' \: {1} 
 core.create.template.empty=Page wiki vide
+core.create.title=Titre
+core.create.title.hint=Titre de la nouvelle page
+core.create.type=Type de page
+core.create.type.blank=Page blanche
+core.create.type.default=Par d\u00E9faut
+core.create.type.templates=Mod\u00E8les
 core.create.validation.mandatoryfield=Champs obligatoire
 core.create.validation.valid=OK
 core.delete=Suppression
 core.delete.backlinksWarning=Les documents suivants contiennent des liens vers la page courante \:{0}En supprimant cette page, ces liens pointeront vers une page vide.
 core.delete.confirm=Il n'est pas possible de r\u00E9cup\u00E9rer un document supprim\u00E9. \u00CAtes-vous s\u00FBr de vouloir continuer ?
+core.delete.confirm.no=Non, revenir en arri\u00E8re \!
+core.delete.confirm.yes=Oui, d\u00E9truire cette page
 core.delete.confirmWithInlinks=Par ailleurs, il n'est pas possible de r\u00E9cup\u00E9rer un document supprim\u00E9. \u00CAtes-vous s\u00FBr de vouloir continuer ?
+core.delete.error=Des erreurs ont eu lieu \:
 core.delete.orphansWarning=Les documents suivants ont ce document comme parent \:{0}En supprimant ce document, ils seront orphelins.
 core.edit.wikiToolbar.bold=Gras
 core.edit.wikiToolbar.boldtext=Texte en gras
@@ -3976,8 +4008,8 @@ xe.wikimacrobridge.macroVisibility=Visibilit\u00E9
 xe.wikimacrobridge.noWikiMacro=Il n'y a pas encore de macros d\u00E9finies dans ce wiki
 xe.wikimacrobridge.wikiMacros=D\u00E9finitions de macros wiki existantes
 xe.xwiki.administration=Application d'administration
-xe.xwiki.administration.install=L''espace XWiki contient des documents techniques n\u00E9cessaires au bon fonctionnement du syst\u00E8me. Vous pouvez administrer votre wiki via {0}.
-xe.xwiki.space=Espace XWiki
+xe.xwiki.administration.install=Cette page ainsi que ses enfants contiennent des documents techniques n\u00E9cessaires au bon fonctionnement du syst\u00E8me. Elles contiennent \u00E9galement les pages de profil des utilisateurs. Vous pouvez administrer votre wiki via {0}.
+xe.xwiki.space=XWiki
 xe.xwiki.space.preferences=Pr\u00E9f\u00E9rences de l'espace XWiki
 xml=XML
 xwikidoc=Documentation
